Fix vertical spacing, finish all layout

--- a/styles.css
+++ b/styles.css
@@ -27,11 +27,10 @@ body {
 
 /* Main Containers Styling */
 .main-container {
-  height: 100vh;
-  width: 100vw;
+
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  /* justify-content: center; */
   align-items: center;
 }
 .grid-container {
@@ -40,8 +39,8 @@ body {
   background-color: rgb(200, 205, 199);
   border: 4px solid black;
   border-radius: 5px;
-  width: 70vw;
-  height: 70vw;
+  width: 85vw;
+  height: 85vw;
   user-select: none;
 }
 .pixel {
@@ -49,36 +48,43 @@ body {
 }
 
 
+.body-item {
+  margin: 25px;
+}
+
+h1 {
+  font-size: 44px;
+}
+
 /* ----- MENU STYLING ------ */
 .menu {
-  width: 50vw;
+  width: 80vw;
   display: flex;
-  justify-content: space-between;
+  align-items: center;
+  justify-content: space-around;
 }
-.menu-item {
-  width: 20%;
+.menu-item { 
+  font-size: 14px;
+  text-align: center;
 }
 
-
-/* ----- Main Media Queries ----- */
-@media (min-width: 1000px) {
-  .grid-container {
-    width: 50vw;
-    height: 50vw;
-  }
+.color-select {
+  display: flex;
+  align-items: center;
 }
 
 
 /* ----- Pen Slider Styling ----- */
 .slidecontainer {
-  width: 30%;
+  /* width: ; */
+  font-size: 16px;
 }
 .slider {
   -webkit-appearance: none; 
   appearance: none;
   width: 100%;
-  height: 25px; 
-  background: #d3d3d3; 
+  height: 4px; 
+  background: #000000; 
   outline: none; 
   opacity: 0.7; 
   -webkit-transition: .2s; 
@@ -90,8 +96,9 @@ body {
 .slider::-webkit-slider-thumb {
   -webkit-appearance: none; 
   appearance: none;
-  width: 25px; 
-  height: 25px; 
+  width: 15px; 
+  height: 15px; 
+  border-radius: 50%;
   background: #04AA6D; 
   cursor: pointer; 
 }
@@ -110,8 +117,8 @@ body {
 .colorPicker {
   background: none;
   border: none;
-  height: 50px;
-  width: 50px;
+  height: 25px;
+  width: 25px;
 }
 
 
@@ -150,4 +157,189 @@ footer {
   font-size: 10px;
   display: flex;
   justify-content: space-between;
+}
+
+
+/* ----- Main Media Queries ----- */
+@media (min-width: 1000px) {
+  .grid-container {
+    width: 800px;
+    height: 800px;
+  }
+}
+
+
+
+/* ------ EXPERIMENTAL MODE ------ */
+
+#exp-h1 {
+  margin: 25px;
+}
+
+#exp-h3 {
+  margin: 25px;
+}
+
+
+#exp-body {
+  background-color: rgb(22, 18, 18);
+  color: #eaf8f3;
+  text-align: center;
+}
+
+.experimental-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+
+
+
+:root {
+  /* generic */
+  --gutterSm: 0.4rem;
+  --gutterMd: 0.8rem;
+  --gutterLg: 1.6rem;
+  --gutterXl: 2.4rem;
+  --gutterXx: 7.2rem;
+  --colorPrimary400: #7e57c2;
+  --colorPrimary600: #5e35b1;
+  --colorPrimary800: #4527a0;
+  --fontFamily: "Dosis", sans-serif;
+  --fontSizeSm: 1.2rem;
+  --fontSizeMd: 1.6rem;
+  --fontSizeLg: 2.1rem;
+  --fontSizeXl: 2.8rem;
+  --fontSizeXx: 3.6rem;
+  --lineHeightSm: 1.1;
+  --lineHeightMd: 1.8;
+  --transitionDuration: 300ms;
+  --transitionTF: cubic-bezier(0.645, 0.045, 0.355, 1);
+  
+  /* floated labels */
+  --inputPaddingV: var(--gutterMd);
+  --inputPaddingH: var(--gutterLg);
+  --inputFontSize: var(--fontSizeLg);
+  --inputLineHeight: var(--lineHeightMd);
+  --labelScaleFactor: 0.8;
+  --labelDefaultPosY: 50%;
+  --labelTransformedPosY: calc(
+    (var(--labelDefaultPosY)) - 
+    (var(--inputPaddingV) * var(--labelScaleFactor)) - 
+    (var(--inputFontSize) * var(--inputLineHeight))
+  );
+  --inputTransitionDuration: var(--transitionDuration);
+  --inputTransitionTF: var(--transitionTF);
+}
+
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
+html {
+  font-size: 10px;
+}
+
+/* body {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  overflow: hidden;
+  width: 100vw;
+  height: 100vh;
+  color: #455A64;
+  background-color: #7E57C2;
+  font-family: var(--fontFamily);
+  font-size: var(--fontSizeMd);
+  line-height: var(--lineHeightMd);
+} */
+
+.wrapper {
+  flex: 0 0 80%;
+  max-width: 80%;
+  margin-bottom: 50px;
+}
+
+.title {
+  margin: 40px;
+  padding: 0;
+  color: #eaf8f3;
+  font-size: 24px;
+  line-height: 1.1;
+  text-align: center;
+  text-shadow: -0.1rem 0.1rem 0.2rem #6bc257;
+}
+
+.input {
+  position: relative;
+  color: #0c0d0d;
+}
+
+
+.Input-text {
+  display: block;
+  margin: 0;
+  padding: var(--inputPaddingV) var(--inputPaddingH);
+  color: inherit;
+  width: 100%;
+  font-family: inherit;
+  font-size: 2.1rem;
+  font-weight: inherit;
+  line-height: var(--inputLineHeight);
+  border: none;
+  border-radius: 0.4rem;
+  transition: box-shadow var(--transitionDuration);
+}
+
+.Input-text::placeholder {
+  color: #d0dadf;
+}
+
+.Input-text:focus {
+  outline: none;
+  box-shadow: 0.2rem 0.8rem 1.6rem #6bc257;
+}
+
+.Input-label {
+  display: block;
+  position: absolute;
+  bottom: 50%;
+  left: 1rem;
+  color: #eaf8f3;
+  font-family: inherit;
+  font-size: 12px;
+  font-weight: inherit;
+  line-height: var(--inputLineHeight);
+  opacity: 0;
+  transform: 
+    translate3d(0, var(--labelDefaultPosY), 0)
+    scale(1);
+  transform-origin: 0 0;
+  transition:
+    opacity var(--inputTransitionDuration) var(--inputTransitionTF),
+    transform var(--inputTransitionDuration) var(--inputTransitionTF),
+    visibility 0ms var(--inputTransitionDuration) var(--inputTransitionTF),
+    z-index 0ms var(--inputTransitionDuration) var(--inputTransitionTF);
+}
+
+.Input-text:placeholder-shown + .Input-label {
+  visibility: hidden;
+  z-index: -1;
+}
+
+.Input-text:not(:placeholder-shown) + .Input-label,
+.Input-text:focus:not(:placeholder-shown) + .Input-label {
+  visibility: visible;
+  z-index: 1;
+  opacity: 1;
+  transform:
+    translate3d(0, var(--labelTransformedPosY), 0)
+    scale(var(--labelScaleFactor));
+  transition:
+    transform var(--inputTransitionDuration),
+    visibility 0ms,
+    z-index 0ms;
 }
